Add market data service with FastAPI, Redis, and live crypto prices

--- a/backend/spring-boot-core/user-service/src/main/resources/application.yml
+++ b/backend/spring-boot-core/user-service/src/main/resources/application.yml
@@ -77,6 +77,8 @@ management:
   health:
     redis:
       enabled: true
+    mail:
+      enabled: false # Add this line to disable mail health check
 
 logging:
   level:
