Market-data service symbol-prices endpoint fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,8 +80,7 @@ services:
       - trading-network
     restart: unless-stopped
     healthcheck:
-      test:
-        ['CMD', 'curl', '-f', 'http://localhost:8080/api/users/actuator/health']
+      test: ['CMD', 'curl', '-f', 'http://localhost:8000/health'] # Fixed: correct port and path
       interval: 30s
       timeout: 10s
       retries: 3
